@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -107,6 +107,7 @@ public abstract class Toolkit {
 
     private static final Map gradientMap = new WeakHashMap();
 
+    @SuppressWarnings("removal")
     private static final boolean verbose = AccessController.doPrivileged((PrivilegedAction<Boolean>) () -> Boolean.getBoolean("javafx.verbose"));
 
     private static final String[] msLibNames = {
@@ -202,7 +203,8 @@ public abstract class Toolkit {
             return TOOLKIT;
         }
 
-        AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
+        @SuppressWarnings("removal")
+        var dummy = AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
             // Get the javafx.version and javafx.runtime.version from a preconstructed
             // java class, VersionInfo, created at build time.
             VersionInfo.setupSystemProperties();
@@ -217,7 +219,9 @@ public abstract class Toolkit {
         boolean userSpecifiedToolkit = true;
 
         // Check a system property to see if there is a specific toolkit to use.
-        // This is not a doPriviledged check so that applets cannot use this.
+        // This is not a doPriviledged check so that applications running
+        // with a security manager cannot use this unless they have permission
+        // to read system properties.
         String forcedToolkit = null;
         try {
             forcedToolkit = System.getProperty("javafx.toolkit");
@@ -258,7 +262,7 @@ public abstract class Toolkit {
                         + forcedToolkit);
             }
 
-            TOOLKIT = (Toolkit)clz.newInstance();
+            TOOLKIT = (Toolkit)clz.getDeclaredConstructor().newInstance();
             if (TOOLKIT.init()) {
                 if (printToolkit) {
                     System.err.println("JavaFX: using " + forcedToolkit);
@@ -368,41 +372,28 @@ public abstract class Toolkit {
 
     public abstract boolean isNestedLoopRunning();
 
-    public abstract TKStage createTKStage(Window peerWindow, boolean securityDialog, StageStyle stageStyle, boolean primary, Modality modality, TKStage owner, boolean rtl, AccessControlContext acc);
+    public abstract TKStage createTKStage(Window peerWindow, boolean securityDialog, StageStyle stageStyle, boolean primary, Modality modality, TKStage owner, boolean rtl, @SuppressWarnings("removal") AccessControlContext acc);
 
-    public abstract TKStage createTKPopupStage(Window peerWindow, StageStyle popupStyle, TKStage owner, AccessControlContext acc);
-    public abstract TKStage createTKEmbeddedStage(HostInterface host, AccessControlContext acc);
+    public abstract TKStage createTKPopupStage(Window peerWindow, StageStyle popupStyle, TKStage owner, @SuppressWarnings("removal") AccessControlContext acc);
+    public abstract TKStage createTKEmbeddedStage(HostInterface host, @SuppressWarnings("removal") AccessControlContext acc);
 
-    /**
-     * Creates an AppletWindow using the provided window pointer as the parent
-     * window.
-     *
-     * @param parent the native parent which will contain the primary stage
-     * window(s). Used on Windows/Linux platforms.
-     *
-     * @param serverName the name of CARemoteLayerServer which
-     * will be used to register native layer. Used on Mac platform.
-     */
-    public abstract AppletWindow createAppletWindow(long parent, String serverName);
-
-    /**
-     * Perform cleanup in preparation for applet termination, including closing
-     * the applet window.
-     */
-    public abstract void closeAppletWindow();
-
+    @SuppressWarnings("removal")
     private final Map<TKPulseListener,AccessControlContext> stagePulseListeners =
             new WeakHashMap<TKPulseListener,AccessControlContext>();
+    @SuppressWarnings("removal")
     private final Map<TKPulseListener,AccessControlContext> scenePulseListeners =
             new WeakHashMap<TKPulseListener,AccessControlContext>();
+    @SuppressWarnings("removal")
     private final Map<TKPulseListener,AccessControlContext> postScenePulseListeners =
             new WeakHashMap<TKPulseListener,AccessControlContext>();
+    @SuppressWarnings("removal")
     private final Map<TKListener,AccessControlContext> toolkitListeners =
             new WeakHashMap<TKListener,AccessControlContext>();
 
     // The set of shutdown hooks is strongly held to avoid premature GC.
     private final Set<Runnable> shutdownHooks = new HashSet<Runnable>();
 
+    @SuppressWarnings("removal")
     private void runPulse(final TKPulseListener listener,
             final AccessControlContext acc) {
 
@@ -421,10 +412,13 @@ public abstract class Toolkit {
         // and those changes propogated to scene before it gets its pulse to update
 
         // Copy of listener map
+        @SuppressWarnings("removal")
         final Map<TKPulseListener,AccessControlContext> stagePulseList =
                 new WeakHashMap<TKPulseListener,AccessControlContext>();
+        @SuppressWarnings("removal")
         final Map<TKPulseListener,AccessControlContext> scenePulseList =
                 new WeakHashMap<TKPulseListener,AccessControlContext>();
+        @SuppressWarnings("removal")
         final Map<TKPulseListener,AccessControlContext> postScenePulseList =
                 new WeakHashMap<TKPulseListener,AccessControlContext>();
 
@@ -433,13 +427,13 @@ public abstract class Toolkit {
             scenePulseList.putAll(scenePulseListeners);
             postScenePulseList.putAll(postScenePulseListeners);
         }
-        for (Map.Entry<TKPulseListener,AccessControlContext> entry : stagePulseList.entrySet()) {
+        for (@SuppressWarnings("removal") Map.Entry<TKPulseListener,AccessControlContext> entry : stagePulseList.entrySet()) {
             runPulse(entry.getKey(), entry.getValue());
         }
-        for (Map.Entry<TKPulseListener,AccessControlContext> entry : scenePulseList.entrySet()) {
+        for (@SuppressWarnings("removal") Map.Entry<TKPulseListener,AccessControlContext> entry : scenePulseList.entrySet()) {
             runPulse(entry.getKey(), entry.getValue());
         }
-        for (Map.Entry<TKPulseListener,AccessControlContext> entry : postScenePulseList.entrySet()) {
+        for (@SuppressWarnings("removal") Map.Entry<TKPulseListener,AccessControlContext> entry : postScenePulseList.entrySet()) {
             runPulse(entry.getKey(), entry.getValue());
         }
 
@@ -452,6 +446,7 @@ public abstract class Toolkit {
             return;
         }
         synchronized (this) {
+            @SuppressWarnings("removal")
             AccessControlContext acc = AccessController.getContext();
             stagePulseListeners.put(listener, acc);
         }
@@ -466,6 +461,7 @@ public abstract class Toolkit {
             return;
         }
         synchronized (this) {
+            @SuppressWarnings("removal")
             AccessControlContext acc = AccessController.getContext();
             scenePulseListeners.put(listener, acc);
         }
@@ -480,6 +476,7 @@ public abstract class Toolkit {
             return;
         }
         synchronized (this) {
+            @SuppressWarnings("removal")
             AccessControlContext acc = AccessController.getContext();
             postScenePulseListeners.put(listener, acc);
         }
@@ -494,6 +491,7 @@ public abstract class Toolkit {
         if (listener == null) {
             return;
         }
+        @SuppressWarnings("removal")
         AccessControlContext acc = AccessController.getContext();
         toolkitListeners.put(listener, acc);
     }
@@ -503,7 +501,9 @@ public abstract class Toolkit {
     }
 
     private TKPulseListener lastTkPulseListener = null;
+    @SuppressWarnings("removal")
     private AccessControlContext lastTkPulseAcc = null;
+    @SuppressWarnings("removal")
     public void setLastTkPulseListener(TKPulseListener listener) {
         lastTkPulseAcc = AccessController.getContext();
         lastTkPulseListener = listener;
@@ -536,6 +536,7 @@ public abstract class Toolkit {
         }
     }
 
+    @SuppressWarnings("removal")
     public void notifyWindowListeners(final List<TKStage> windows) {
         for (Map.Entry<TKListener,AccessControlContext> entry : toolkitListeners.entrySet()) {
             final TKListener listener = entry.getKey();
