@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -73,7 +73,7 @@ public class JumpStatementTest extends ParserBase {
         ReturnStmt ret = (ReturnStmt)tree;
         assertTrue(ret.getExpr() instanceof LiteralExpr);
         LiteralExpr lit = (LiteralExpr)ret.getExpr();
-        assertEquals(lit.getValue(), new Integer(3));
+        assertEquals(lit.getValue(), Integer.valueOf(3));
     }
 
     @Test(expected = ParseCancellationException.class)
